# template-stm32h743-rtos

./: CMakeLists.txt  Makefile  README.md  STM32H743.svd  STM32H743ZITx_FLASH.ld
Drivers/FreeRTOS-Kernel/: croutine.c  event_groups.c  queue.c  stream_buffer.c  tasks.c  timers.c
Drivers/FreeRTOS-Kernel/examples/template_configuration/: FreeRTOSConfig.h
Drivers/FreeRTOS-Kernel/portable/template/: port.c
Drivers/LwIP/src/: Filelists.cmake
Src/freertos/: FreeRTOSConfig.h
